Temporary fix of the arrow-down button on mobile size screen

--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -149,7 +149,7 @@ a:focus {
 	
 	.text-vertical-center {
 		position: relative;
-		padding-top: 65%;
+		padding-top: 140%;
 		bottom: 0px;
 		text-align: center;
 		width: 100%;
